[project]
name = "ccwriter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Marko Bausch", email = "60338487+mrkbac@users.noreply.github.com" }
]
dependencies = [
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.autopep8]
aggressive = 3
recursive = true
max_line_length = 100

[tool.ruff]
line-length = 100
select = ['ALL']

ignore = [
    'ANN101',  # missing-type-self
    'ANN401',  # dynamically-typed-expression
    'C901',    # complex-structure
    'D',       # pydocstyle
    'EM101',   # raw-string-in-exception
    'EM102',   # f-string-in-exception
    'PLR2004', # MagicValueComparisons
    'S101',    # AssertUsed
    'TCH',     # flake8-type-checking
    'TCH',     # flake8-type-checking
    'TRY003',  # raise-vanilla-args
]

target-version = 'py310'


